tick and real time synchronizatio